--- a/index.css
+++ b/index.css
@@ -1,30 +1,39 @@
 .body {
-  font-family: "Poppins", sans-serif !important;
-  background-color: #1e0342;
-  color: #f5f5f5 !important;
+  background-color: #f7f7f7;
+  color: black ;
 }
 
 .wrap {
-  padding: 1% 15% 1% 15%;
+  padding: 2% 20% 2% 20%;
+}
+
+@font-face {
+  font-family: "Safira March";
+  src: url("./Safira March.otf") format("opentype");
 }
 
 /* Header */
+
 .header {
   display: flex;
   flex-direction: column;
+  color: #000;
 }
 
 .header-container {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 50px;
 }
 
 .nav-left {
   display: flex;
   align-items: center;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 600;
+}
+
+.header-title{
+  font-family: "Safira march" !important;
 }
 
 .nav-right {
@@ -34,27 +43,42 @@
 }
 
 a {
+  font-family: "Raleway", sans-serif;
   text-decoration: none !important;
-  color: white !important;
+  color: black !important;
 }
 
 a:hover {
   color: #0e46a3 !important;
 }
 
-/* Hero */
+
+
+/* ---------- Hero ---------- */
 .hero {
   padding: 0% 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: "Inter", sans-serif;
+  background-color: e0e0e0;
+  position: relative;
 }
+
+/* .hero-background {
+  opacity: 0.5;
+  background-color: rgba(128, 128, 128, 0.5);
+  background-image: url('hero.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+} */
 
 .hero-container {
   display: flex;
-  justify-content: space-between;
+  padding: 3% 0%;
   gap: 2rem;
-  margin-bottom: 100px;
 }
 
 .hero-left {
@@ -62,198 +86,59 @@ a:hover {
   width: 40%;
 }
 
-.box {
-  width: 350px;
-  height: 300px;
-  position: absolute;
-  background-color: #9ac8cd;
-  -webkit-animation: squareToCircle 4s 2s infinite alternate;
-}
-
-@-webkit-keyframes squareToCircle {
-  0% {
-    border-radius: 0 0 0 0;
-    background: #0e46a3;
-    transform: rotate(0deg);
-  }
-  25% {
-    border-radius: 50% 0 0 0;
-    background: #9ac8cd;
-    transform: rotate(45deg);
-  }
-  50% {
-    border-radius: 50% 50% 0 0;
-    background: #e1f7f5;
-    transform: rotate(90deg);
-  }
-  75% {
-    border-radius: 50% 50% 50% 0;
-    background: blue;
-    transform: rotate(135deg);
-  }
-  100% {
-    border-radius: 50% 50% 50% 50%;
-    background: lightblue;
-    transform: rotate(180deg);
-  }
-}
-
-.title {
-  font-family: "LotFreeFont", sans-serif !important;
-}
-
-.about-h1 {
-  font-family: "LotFreeFont", sans-serif !important;
-  padding: 5px 0px;
-}
-
-.me {
-  color: #1e0342;
-  font-weight:600;
-}
-
-.name {
-  font-family: "LotFreeFont", sans-serif !important;
-  color: lightblue;
-  font-weight: 600;
-  font-size: 5rem;
-}
-
-.intro {
-  font-weight: 600;
-  font-size: 5rem;
-}
-
-.desc {
-  font-weight: 400;
-  font-size: 1.2rem;
-  
-}
-
-.bg {
-  width: 70%;
+.hero-image {
+  width: 100%;
   border-radius: 10px;
-  position: relative;
 }
 
 .hero-right {
   width: 60%;
-  text-align: end;
+  text-align: center;
   font-size: 2rem;
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
-.buttons {
-  width: 100%;
-  display: flex;
-  margin-top: 20px;
-  gap: 2rem;
-  flex-direction: row;
-  align-items: end;
-  justify-content: end;
+.name {
+  font-family: "Safira march" !important;
+  color: #555050;
+  font-weight: 600;
+  font-size: 3rem;
+  padding-bottom: 30px;
 }
 
-.button {
-  border-radius: 15px;
-  border: none;
-  padding: 10px 20px 10px 20px;
-  font-family: "Poppins", sans-serif;
-  background: #1e90ff;
-  font-size: 1.2rem;
+.intro {
+  font-family: "Safira march" !important;
   font-weight: 500;
-  color: white;
+  font-size: 3rem;
+  padding-bottom: 30px;
 }
 
-.button:hover {
-  background: linear-gradient(45deg, blue, #ffffff);
-  transition: all 0.4s ease-in-out;
-  cursor: pointer;
+.desc {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 1.2rem;
 }
 
-/* About me */
+/* ---------- About ---------- */
 .aboutme {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #8870aa;
-}
-
-.long {
-  animation-name: my-animation;
-  animation-duration: 4s;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  width: 50px;
-  height: 100px;
-  border-radius: 50px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@keyframes my-animation {
-  from {
-    background-color: #ff7a59;
-    height: 200px;
-    top: 10px;
-  }
-  to {
-    background-color: #33475b;
-    height: 50px;
-    top: 100px;
-  }
-}
-
-.padding-top {
-  margin-top: 50px;
-}
-
-.padding-top1 {
-  margin-top: 130px;
-}
-
-.long1 {
-  animation-name: my-animation1;
-  animation-duration: 4s;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  width: 50px;
-  height: 100px;
-  border-radius: 50px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@keyframes my-animation1 {
-  from {
-    background-color: #33475b;
-    height: 50px;
-    top: 100px;
-  }
-  to {
-    background-color: #ff7a59;
-    height: 200px;
-    top: 10px;
-  }
+  background-color: #514c4d;
 }
 
 .about-container {
   display: flex;
   justify-content: space-between;
-  margin: 5px 0;
+  padding: 3% 0%;
 }
 
 .about-title {
-  font-size: 20px;
-  font-weight: 500;
+  font-family: "Safira March";
+  color: #f7f7f7;
 }
 
 .about-desc{
@@ -262,15 +147,43 @@ a:hover {
   font-weight: 400;
   font-size: 1.2rem;
   padding-top: 10px;
-  font-family:"Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
+  color: #f7f7f7;
 }
 
 .about-left {
   padding-top: 10px;
   width: 70%;
+  background-color: #8a8686;
   display: flex;
+  border-radius: 20px;
   margin-right: 20px;
   flex-direction: column;
+}
+
+.about-left-padding {
+  padding: 15px;
+}
+
+.about-buttons-container {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+  gap: 2rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-button {
+  border-radius: 15px;
+  border: none;
+  padding: 10px 20px 10px 20px;
+  font-family: "Raleway", sans-serif;
+  background-color: #514c4d;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: white;
 }
 
 .about-right {
@@ -279,46 +192,26 @@ a:hover {
   flex-direction: row;
 }
 
-.abo{
+.about-image {
   width: 100%;
+  border-radius: 20px;
 }
 
-/* TechStack */
 
-.techstack {
-  padding: 3% 20% 1% 20%;
-}
-
+/* ---------- Tech Stack ---------- */
 .techstack-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 0.5rem;
-  width: 100%;
-}
-
-@font-face {
-  font-family: "LotFreeFont";
-  src: url("./LOT.otf") format("opentype");
+  background-color: #e0e0e0;
+  padding: 3% 0%;
 }
 
 .tech-left {
-  font-size: 40px;
+  font-size: 30px;
   display: flex;
-  flex-direction: row;
-  width: 20%;
-  font-family: "LotFreeFont", sans-serif !important;
-}
-.tech-left img {
-  height: 100%;
-  width: 100%;
-}
-
-.falling-techstack {
-  display: flex;
-  flex-direction: row;
+  font-family: "Safira March";
   justify-content: center;
-  text-align: center;
 }
 
 .tech-right {
@@ -326,6 +219,7 @@ a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5rem;
   flex-direction: column;
 }
 
@@ -335,10 +229,6 @@ a:hover {
   flex-direction: row;
   align-items: center;
   gap: 4rem;
-}
-
-svg {
-  width: 70%;
 }
 
 .custom-card {
@@ -352,14 +242,7 @@ svg {
   flex-direction: column;
   justify-content: space-between;
   gap: 0.5rem;
-  margin-bottom: 50px;
   width: 100%;
-}
-
-.card-container:hover {
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
 }
 
 .card-left {
@@ -372,43 +255,19 @@ svg {
   align-items: center;
 }
 
-.tools-container {
-  padding: 2% 20% 1% 20%; /* Apply padding */
-  overflow: hidden; /* Hide overflow for the animation */
-  position: relative; /* Position relative for absolute child positioning */
+.card-left svg {
+  width: 70%;
 }
 
-.tools-row {
-  display: flex;
-  flex-direction: row;
-  width: calc(200%); /* Set width to accommodate duplicated icons */
-  animation: move 10s linear infinite; /* Apply the animation */
-  white-space: nowrap; /* Prevents icons from wrapping */
-}
-
-@keyframes move {
-  0% {
-    transform: translateX(100); /* Start from the original position */
-  }
-  100% {
-    transform: translateX(
-      -100%
-    ); /* Move to the left, halfway through the duplicated icons */
-  }
-}
-
-.tools-row svg {
-  width: 50%;
-}
-
-/* Project */
+/* ---------- Projects ---------- */
 .project {
   display: flex;
   justify-content: space-between;
+  background-color: #514c4d;
 }
 
 .project-row {
-  padding-top: 2%;
+  padding-top: 40px;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -417,80 +276,19 @@ svg {
 }
 
 .project-title {
-  color: #33475b;
+  color: #f7f7f7;
 }
 
-/* Contact */
-.contact {
-  text-align: center;
-  background-color: rgba(138, 127, 185, 0.1);
-}
-
-.contact-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2% 20% 1% 20%;
-}
-
-.con-left {
-  width: 30%;
-}
-
-.con-right {
-  width: 70%;
-  display: flex;
-  flex-direction: row;
-  gap: 2rem;
-}
-
-.pad-2 {
-  margin-top: 40px;
-}
-
-.pad-3 {
-  margin-top: 80px;
-}
-
-.icons {
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-.con-card {
-  padding: 10px;
-  display: flex;
-  font-size: 12px;
-  flex-direction: column;
-  text-align: center;
-  gap: 0.5rem;
-  border: 2px solid #8870aa;
-  border-radius: 20px;
-  width: 35%;
-  height: 80px;
-}
-
-.con-text {
-  display: flex;
-  flex-direction: column;
-}
-/* Footer */
-.footer-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 2% 20% 1% 20%;
-}
 * {
   box-sizing: border-box;
 }
 
-.card-proj {
+.card {
   --blur: 16px;
   --size: clamp(250px, 10vmin, 550px);
   width: var(--size);
   aspect-ratio: 4 / 3;
+  border-radius: 50px;
   position: relative;
   border-radius: 2rem;
   overflow: hidden;
@@ -498,7 +296,7 @@ svg {
   transform: translateZ(0);
 }
 
-.card-proj__img {
+.card__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -559,4 +357,52 @@ svg {
 
 .card:is(:hover, :focus-visible) {
   --hover: 1;
+}
+
+/* ---------- Footer ---------- */
+.footer-left {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  width: 60%;
+  color: #6a6464;
+}
+
+.footer-icons{
+  display: flex;
+  gap: 1rem;
+  flex-direction: row;
+  color:#6a6464;
+}
+
+.footer-a {
+  color: #6a6464!important;
+}
+
+.footer-card {
+  border-radius: 50%;
+  border: 2px solid #6a6464;
+  justify-content: center;
+  width: 40px; 
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-title {
+  color:  #6a6464;
+  font-family: "Safira march" !important;
+}
+
+.footer-right {
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.copyright {
+  font-family: "Raleway", sans-serif;
+  font-size: small;
 }
